--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -8,4 +8,209 @@
     tools:context="com.martindisch.chronoscopy.SettingsActivity"
     tools:showIn="@layout/activity_settings">
 
+    <ImageView
+        android:id="@+id/settings_ivStar"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="24dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_star" />
+
+    <TextView
+        android:id="@+id/settings_tvRegret"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="5dp"
+        android:text="@string/regret"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toRightOf="@+id/settings_ivStar"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/settings_ivStar" />
+
+    <SeekBar
+        android:id="@+id/settings_sbRegret"
+        style="@style/Widget.AppCompat.SeekBar.Discrete"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="12dp"
+        android:max="10"
+        android:progress="5"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="@+id/settings_tvRegret"
+        app:layout_constraintRight_toLeftOf="@+id/settings_etRegret"
+        app:layout_constraintTop_toTopOf="@+id/settings_etRegret" />
+
+    <EditText
+        android:id="@+id/settings_etRegret"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:gravity="center_horizontal"
+        android:inputType="number"
+        android:text="5"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/settings_tvRegret" />
+
+    <TextView
+        android:id="@+id/settings_tvSkill"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/skill"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toRightOf="@+id/settings_ivStar"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/settings_etRegret" />
+
+    <SeekBar
+        android:id="@+id/settings_sbSkill"
+        style="@style/Widget.AppCompat.SeekBar.Discrete"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="12dp"
+        android:max="10"
+        android:progress="5"
+        app:layout_constraintLeft_toLeftOf="@+id/settings_tvSkill"
+        app:layout_constraintRight_toLeftOf="@+id/settings_etSkill"
+        app:layout_constraintTop_toTopOf="@+id/settings_etSkill" />
+
+    <EditText
+        android:id="@+id/settings_etSkill"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:gravity="center_horizontal"
+        android:inputType="number"
+        android:text="5"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/settings_tvSkill" />
+
+    <TextView
+        android:id="@+id/settings_tvFun"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/fun"
+        app:layout_constraintLeft_toRightOf="@+id/settings_ivStar"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/settings_etSkill" />
+
+    <EditText
+        android:id="@+id/settings_etFun"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:gravity="center_horizontal"
+        android:inputType="number"
+        android:text="5"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/settings_tvFun" />
+
+    <SeekBar
+        android:id="@+id/settings_sbFun"
+        style="@style/Widget.AppCompat.SeekBar.Discrete"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="12dp"
+        android:max="10"
+        android:progress="5"
+        app:layout_constraintLeft_toLeftOf="@+id/settings_tvFun"
+        app:layout_constraintRight_toLeftOf="@+id/settings_etFun"
+        app:layout_constraintTop_toTopOf="@+id/settings_etFun" />
+
+    <ImageView
+        android:id="@+id/settings_ivPerson"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="24dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/settings_etFun"
+        app:srcCompat="@drawable/ic_person" />
+
+    <TextView
+        android:id="@+id/settings_tvResponsibility"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="5dp"
+        android:text="@string/responsibility"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toRightOf="@+id/settings_ivPerson"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/settings_ivPerson" />
+
+    <EditText
+        android:id="@+id/settings_etResponsibility"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:gravity="center_horizontal"
+        android:inputType="number"
+        android:text="5"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/settings_tvResponsibility" />
+
+    <SeekBar
+        android:id="@+id/settings_sbResponsibility"
+        style="@style/Widget.AppCompat.SeekBar.Discrete"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="12dp"
+        android:max="10"
+        android:progress="5"
+        app:layout_constraintLeft_toLeftOf="@+id/settings_tvResponsibility"
+        app:layout_constraintRight_toLeftOf="@+id/settings_etResponsibility"
+        app:layout_constraintTop_toTopOf="@+id/settings_etResponsibility" />
+
+    <EditText
+        android:id="@+id/settings_etLeisure"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="@string/leisure"
+        android:inputType="numberDecimal"
+        app:layout_constraintLeft_toRightOf="@+id/settings_ivPerson"
+        app:layout_constraintTop_toBottomOf="@+id/settings_etResponsibility" />
+
+    <EditText
+        android:id="@+id/settings_etDate"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="@string/dateofbirth"
+        android:inputType="date"
+        app:layout_constraintLeft_toRightOf="@+id/settings_ivPerson"
+        app:layout_constraintTop_toBottomOf="@+id/settings_etLeisure" />
 </android.support.constraint.ConstraintLayout>
