--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -202,17 +202,28 @@
         app:layout_constraintLeft_toRightOf="@+id/settings_ivPerson"
         app:layout_constraintTop_toBottomOf="@+id/settings_tvResponsibilityStatus" />
 
-    <EditText
-        android:id="@+id/settings_etDate"
-        android:layout_width="120dp"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/settings_tilDate"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:layout_marginLeft="16dp"
+        android:layout_marginRight="24dp"
         android:layout_marginTop="8dp"
-        android:ems="10"
-        android:hint="@string/dateofbirth"
-        android:inputType="date"
+        app:errorEnabled="true"
+        app:hintEnabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/settings_ivPerson"
-        app:layout_constraintTop_toBottomOf="@+id/settings_etLeisure" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/settings_etLeisure">
+
+        <EditText
+            android:id="@+id/settings_etDate"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/dateofbirth"
+            android:inputType="date" />
+    </android.support.design.widget.TextInputLayout>
+
 </android.support.constraint.ConstraintLayout>
