--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -190,17 +190,23 @@
         app:layout_constraintRight_toLeftOf="@+id/settings_tvResponsibilityStatus"
         app:layout_constraintTop_toTopOf="@+id/settings_tvResponsibilityStatus" />
 
-    <EditText
-        android:id="@+id/settings_etLeisure"
-        android:layout_width="80dp"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/settings_tilLeisure"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
-        android:ems="10"
-        android:hint="@string/leisure"
-        android:inputType="numberDecimal"
         app:layout_constraintLeft_toRightOf="@+id/settings_ivPerson"
-        app:layout_constraintTop_toBottomOf="@+id/settings_tvResponsibilityStatus" />
+        app:layout_constraintTop_toBottomOf="@+id/settings_tvResponsibilityStatus">
+
+        <EditText
+            android:id="@+id/settings_etLeisure"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/leisure"
+            android:inputType="numberDecimal" />
+    </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/settings_tilDate"
@@ -211,11 +217,10 @@
         android:layout_marginRight="24dp"
         android:layout_marginTop="8dp"
         app:errorEnabled="true"
-        app:hintEnabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/settings_ivPerson"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/settings_etLeisure">
+        app:layout_constraintTop_toBottomOf="@+id/settings_tilLeisure">
 
         <EditText
             android:id="@+id/settings_etDate"
