Add RecyclerView to activities layout

--- a/app/src/main/res/layout/fragment_activities.xml
+++ b/app/src/main/res/layout/fragment_activities.xml
@@ -14,8 +14,6 @@
         android:id="@+id/activities_tvTodayLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
         android:layout_marginTop="16dp"
         android:text="@string/todays_score"
         android:textColor="@color/overview_today"
@@ -29,8 +27,6 @@
         android:id="@+id/activities_tvSpentLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
         android:layout_marginTop="16dp"
         android:text="@string/spent_time"
         android:textColor="@color/overview_spent"
@@ -42,8 +38,6 @@
         android:id="@+id/activities_tvEvaluationLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
         android:layout_marginTop="16dp"
         android:text="@string/evaluation"
         android:textColor="@color/overview_evaluation"
@@ -55,11 +49,10 @@
         android:id="@+id/activities_tvToday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="16dp"
-        android:text="TextView"
+        android:layout_marginTop="8dp"
         android:textColor="@color/overview_today"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/divider1"
         app:layout_constraintTop_toBottomOf="@+id/activities_tvTodayLabel"
@@ -69,11 +62,11 @@
         android:id="@+id/activities_tvSpent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="16dp"
-        android:text="TextView"
+        android:layout_marginTop="8dp"
         android:textColor="@color/overview_spent"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintLeft_toRightOf="@+id/divider1"
         app:layout_constraintRight_toLeftOf="@+id/divider2"
         app:layout_constraintTop_toBottomOf="@+id/activities_tvSpentLabel"
@@ -83,12 +76,11 @@
         android:id="@+id/activities_tvEvaluation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="16dp"
-        android:text="TextView"
+        android:layout_marginTop="8dp"
         android:textColor="@color/overview_evaluation"
-        app:layout_constraintHorizontal_bias="0.504"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintLeft_toRightOf="@+id/divider2"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/activities_tvEvaluationLabel"
@@ -97,8 +89,11 @@
     <View
         android:id="@+id/divider1"
         android:layout_width="1dp"
-        android:layout_height="100dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginTop="0dp"
         android:background="@color/light_grey"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/divider2"
         app:layout_constraintTop_toTopOf="parent" />
@@ -106,10 +101,28 @@
     <View
         android:id="@+id/divider2"
         android:layout_width="1dp"
-        android:layout_height="100dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginTop="0dp"
         android:background="@color/light_grey"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
         app:layout_constraintLeft_toRightOf="@+id/divider1"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/activities_tvSpent"
+        app:layout_constraintVertical_bias="1.0" />
 
 </android.support.constraint.ConstraintLayout>
