--- a/app/src/main/res/layout/content_new_activity.xml
+++ b/app/src/main/res/layout/content_new_activity.xml
@@ -12,26 +12,34 @@
         android:layout_width="28dp"
         android:layout_height="28dp"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:scaleType="centerCrop"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/newactivity_etName"
+        app:layout_constraintTop_toTopOf="@+id/newactivity_tilName"
         app:srcCompat="@drawable/ic_pencil" />
 
-    <EditText
-        android:id="@+id/newactivity_etName"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/newactivity_tilName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
         android:layout_marginTop="24dp"
-        android:ems="10"
-        android:hint="@string/name"
-        android:inputType="textCapWords"
+        app:errorEnabled="true"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/newactivity_ivName"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <EditText
+            android:id="@+id/newactivity_etName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/name"
+            android:inputType="textCapWords" />
+
+    </android.support.design.widget.TextInputLayout>
 
     <ImageView
         android:id="@+id/newactivity_ivDate"
@@ -50,11 +58,11 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="0dp"
         app:errorEnabled="true"
         app:layout_constraintLeft_toRightOf="@+id/newactivity_ivDate"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/newactivity_etName">
+        app:layout_constraintTop_toBottomOf="@+id/newactivity_tilName">
 
         <EditText
             android:id="@+id/newactivity_etDate"
