--- a/app/src/main/res/layout/content_new_activity.xml
+++ b/app/src/main/res/layout/content_new_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context="com.martindisch.chronoscopy.NewActivityActivity"
+    tools:context="com.martindisch.chronoscopy.ui.NewActivityActivity"
     tools:showIn="@layout/activity_new_activity">
 
     <ImageView
