--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true"
-    tools:context="com.martindisch.chronoscopy.SettingsActivity"
+    tools:context="com.martindisch.chronoscopy.ui.SettingsActivity"
     tools:showIn="@layout/activity_settings">
 
     <ImageView
