--- a/app/src/main/res/layout/content_new_activity.xml
+++ b/app/src/main/res/layout/content_new_activity.xml
@@ -31,7 +31,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
+        <android.support.design.widget.TextInputEditText
             android:id="@+id/newactivity_etName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -64,7 +64,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/newactivity_tilName">
 
-        <EditText
+        <android.support.design.widget.TextInputEditText
             android:id="@+id/newactivity_etDate"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
@@ -85,7 +85,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/newactivity_tilDate">
 
-        <EditText
+        <android.support.design.widget.TextInputEditText
             android:id="@+id/newactivity_etTime"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
