--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -188,7 +188,7 @@
         app:layout_constraintLeft_toRightOf="@+id/settings_ivPerson"
         app:layout_constraintTop_toBottomOf="@+id/settings_tvResponsibilityStatus">
 
-        <EditText
+        <android.support.design.widget.TextInputEditText
             android:id="@+id/settings_etLeisure"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
@@ -211,7 +211,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/settings_tilLeisure">
 
-        <EditText
+        <android.support.design.widget.TextInputEditText
             android:id="@+id/settings_etDate"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
