--- a/app/src/main/res/layout/item_usage.xml
+++ b/app/src/main/res/layout/item_usage.xml
@@ -17,7 +17,6 @@
         android:layout_marginRight="16dp"
         android:layout_marginTop="16dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@android:color/primary_text_light"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/item_usage_tvValue"
@@ -32,11 +31,11 @@
         android:layout_marginRight="24dp"
         android:layout_marginTop="0dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@android:color/primary_text_light"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.487"
+        app:layout_constraintVertical_bias="0.5"
         tools:text="8.9 / h" />
 
     <TextView
