--- a/app/src/main/res/layout/fragment_activities.xml
+++ b/app/src/main/res/layout/fragment_activities.xml
@@ -17,7 +17,7 @@
         android:textColor="@color/overview_today"
         app:layout_constraintHorizontal_bias="0.516"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/divider1"
+        app:layout_constraintRight_toLeftOf="@+id/activities_divider1"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed" />
 
@@ -28,8 +28,8 @@
         android:layout_marginTop="16dp"
         android:text="@string/spent_time"
         android:textColor="@color/overview_spent"
-        app:layout_constraintLeft_toRightOf="@+id/divider1"
-        app:layout_constraintRight_toLeftOf="@+id/divider2"
+        app:layout_constraintLeft_toRightOf="@+id/activities_divider1"
+        app:layout_constraintRight_toLeftOf="@+id/activities_divider2"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -39,7 +39,7 @@
         android:layout_marginTop="16dp"
         android:text="@string/evaluation"
         android:textColor="@color/overview_evaluation"
-        app:layout_constraintLeft_toRightOf="@+id/divider2"
+        app:layout_constraintLeft_toRightOf="@+id/activities_divider2"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -52,7 +52,7 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/divider1"
+        app:layout_constraintRight_toLeftOf="@+id/activities_divider1"
         app:layout_constraintTop_toBottomOf="@+id/activities_tvTodayLabel"
         tools:text="14.3" />
 
@@ -65,8 +65,8 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0.505"
-        app:layout_constraintLeft_toRightOf="@+id/divider1"
-        app:layout_constraintRight_toLeftOf="@+id/divider2"
+        app:layout_constraintLeft_toRightOf="@+id/activities_divider1"
+        app:layout_constraintRight_toLeftOf="@+id/activities_divider2"
         app:layout_constraintTop_toBottomOf="@+id/activities_tvSpentLabel"
         tools:text="8.3 h" />
 
@@ -79,13 +79,13 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0.505"
-        app:layout_constraintLeft_toRightOf="@+id/divider2"
+        app:layout_constraintLeft_toRightOf="@+id/activities_divider2"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/activities_tvEvaluationLabel"
         tools:text="3 / 5" />
 
     <View
-        android:id="@+id/divider1"
+        android:id="@+id/activities_divider1"
         android:layout_width="1dp"
         android:layout_height="0dp"
         android:layout_marginBottom="0dp"
@@ -93,23 +93,23 @@
         android:background="@color/light_grey"
         app:layout_constraintBottom_toTopOf="@+id/activities_rvActivities"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/divider2"
+        app:layout_constraintRight_toLeftOf="@+id/activities_divider2"
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
-        android:id="@+id/divider2"
+        android:id="@+id/activities_divider2"
         android:layout_width="1dp"
         android:layout_height="0dp"
         android:layout_marginBottom="0dp"
         android:layout_marginTop="0dp"
         android:background="@color/light_grey"
         app:layout_constraintBottom_toTopOf="@+id/activities_rvActivities"
-        app:layout_constraintLeft_toRightOf="@+id/divider1"
+        app:layout_constraintLeft_toRightOf="@+id/activities_divider1"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
-        android:id="@+id/divider3"
+        android:id="@+id/activities_divider3"
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginBottom="0dp"
@@ -134,6 +134,6 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/divider3" />
+        app:layout_constraintTop_toBottomOf="@+id/activities_divider3" />
 
 </android.support.constraint.ConstraintLayout>
