--- a/app/src/main/res/layout/content_new_activity.xml
+++ b/app/src/main/res/layout/content_new_activity.xml
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/name"
-            android:inputType="textCapWords" />
+            android:inputType="textCapSentences"/>
 
     </android.support.design.widget.TextInputLayout>
 
